--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,15 @@
   box-sizing: border-box;
 }
 
+@keyframes white_black {
+  from {
+    background-color: white;
+  }
+  to {
+    background-color: black;
+    color: white;
+  }
+}
 body {
   font-family: "Poppins", sans-serif;
   height: 100vh;
@@ -38,10 +47,6 @@ body {
   flex-direction: column;
   width: 980px;
 }
-.container__calc {
-  width: 100%;
-  overflow-y: scroll;
-}
 .container__calc .calc {
   display: flex;
   flex-direction: row;
@@ -65,20 +70,36 @@ body {
   width: 100px;
   height: 30px;
   background-color: rgba(0, 0, 0, 0.3137254902);
-  border-radius: 10px;
+  border-radius: 8px;
+  border: 1px solid white;
   color: white;
   padding-left: 5px;
   float: left;
 }
+.container__calc .calc select option,
+.container__calc .calc input option {
+  font-size: 17px;
+  border-radius: 5px;
+  color: white;
+  background-color: #1d1c1c;
+}
 .container__calc .calc .battery_stat {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   background-color: #1d1c1c;
   color: white;
   border-radius: 15px;
-  padding: 15px 15px 0 15px;
+  padding: 0 15px 0 15px;
   min-width: 450px;
+}
+.container__calc .calc .battery_stat h3 {
+  text-align: left;
+  font-weight: bold;
+  font-size: 20px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  letter-spacing: 0.1px;
+  padding-top: 15px;
 }
 .container__calc .calc .battery_stat .point {
   display: flex;
@@ -161,7 +182,7 @@ body {
   height: 75px;
   margin-top: 15px;
   padding: 0;
-  border-radius: 15px;
+  border-radius: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -174,13 +195,29 @@ body {
   transition-duration: 0.5s;
 }
 .container__calc .calc .stop_time .plus:hover {
-  transform: scale(1.1);
+  animation: white_black 0.2s both;
+}
+.container__calc .calc .stop_time .equel {
+  width: 100%;
+  height: 30px;
+  margin-top: 15px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  user-select: none;
+  background-color: white;
+  color: black;
+  font-weight: 600;
+}
+.container__calc .calc .stop_time .equel:hover {
+  animation: white_black 0.2s both;
 }
 .container__calc .calc .stop_time .stash {
   overflow-y: scroll;
-  max-height: 172px;
-  min-height: 172px;
-  margin-top: 15px;
+  max-height: 135px;
+  min-height: 135px;
 }
 .container__calc .calc .stop_time .stash .post {
   width: 100%;
@@ -211,8 +248,7 @@ body {
 .container__calc .calc .result {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  width: 100%;
+  width: 105%;
   background-color: #1d1c1c;
   color: white;
   border-radius: 15px;
@@ -227,32 +263,6 @@ body {
 .container__calc .calc .result h4 span {
   margin-left: 15px;
   float: right;
-}
-.container__calc .calc .result .equel {
-  width: 100%;
-  height: 30px;
-  margin-top: 15px;
-  border-radius: 15px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  user-select: none;
-  background-color: white;
-  color: black;
-  font-weight: 600;
-}
-@keyframes white_black {
-  from {
-    background-color: white;
-  }
-  to {
-    background-color: black;
-    color: white;
-  }
-}
-.container__calc .calc .result .equel:hover {
-  animation: white_black 0.2s both;
 }
 .container__plot {
   display: flex;
