--- a/src/css/style.css
+++ b/src/css/style.css
@@ -71,7 +71,7 @@ body {
   height: 30px;
   background-color: rgba(0, 0, 0, 0.3137254902);
   border-radius: 8px;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.3);
   color: white;
   padding-left: 5px;
   float: left;
@@ -104,11 +104,12 @@ body {
 .container__calc .calc .battery_stat .point {
   display: flex;
   flex-direction: row;
+  gap: 1rem;
 }
 .container__calc .calc .battery_stat .point label span {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   line-height: 30px;
   padding: 0 5px 0 5px;
 }
@@ -182,6 +183,7 @@ body {
   height: 75px;
   margin-top: 15px;
   padding: 0;
+  border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 8px;
   display: flex;
   align-items: center;
@@ -201,6 +203,7 @@ body {
   width: 100%;
   height: 30px;
   margin-top: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 8px;
   display: flex;
   align-items: center;
@@ -234,9 +237,9 @@ body {
   display: inline-block;
   min-width: 60px;
   height: 18px;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.3);
   text-align: center;
-  border-radius: 15px;
+  border-radius: 8px;
   background-color: white;
   color: black;
   font-weight: bold;
@@ -244,6 +247,9 @@ body {
   line-height: 16px;
   cursor: pointer;
   user-select: none;
+}
+.container__calc .calc .stop_time .stash .post .del:hover {
+  animation: white_black 0.2s both;
 }
 .container__calc .calc .result {
   display: flex;
