--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -78,7 +78,7 @@ body {
                 height: 30px;
                 background-color: #00000050;
                 border-radius: 8px;
-                border: 1px solid white;
+                border: 1px solid rgba(255, 255, 255, 0.3);
                 color: white;
                 padding-left: 5px;
                 float: left;
@@ -114,13 +114,13 @@ body {
                 .point {
                     display: flex;
                     flex-direction: row;
-
+                    gap: 1rem;
                     label {
 
                         span {
                             display: flex;
                             align-items: center;
-                            justify-content: center;
+                            justify-content: flex-start;
                             line-height: 30px;
                             padding: 0 5px 0 5px;
                         }
@@ -208,6 +208,7 @@ body {
                     height: 75px;
                     margin-top: 15px;
                     padding: 0;
+                    border: 1px solid rgba(255, 255, 255, 0.3);
                     border-radius: 8px;
                     display: flex;
                     align-items: center;
@@ -229,6 +230,7 @@ body {
                     width: 100%;
                     height: 30px;
                     margin-top: 15px;
+                    border: 1px solid rgba(255, 255, 255, 0.3);
                     border-radius: 8px;
                     display: flex;
                     align-items: center;
@@ -265,9 +267,9 @@ body {
                             display: inline-block;
                             min-width: 60px;
                             height: 18px;
-                            border: 1px solid white;
+                            border: 1px solid rgba(255, 255, 255, 0.3);
                             text-align: center;
-                            border-radius: 15px;
+                            border-radius: 8px;
                             background-color: white;
                             color: black;
                             font-weight: bold;
@@ -275,6 +277,10 @@ body {
                             line-height: 16px;
                             cursor: pointer;
                             user-select: none;
+
+                            &:hover {
+                                animation: white_black 0.2s both;
+                            }
                         }
                     }
                 }
