--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -289,17 +289,18 @@ body {
             .result {
                 display: flex;
                 flex-direction: column;
-                width: 105%;
+                width: 100%;
                 background-color: #1d1c1c;
                 color: white;
                 border-radius: 15px;
                 padding: 15px;
                 margin-left: 15px;
 
-                h4 {
-                    padding-bottom: 15px;
-                    width: 165px;
-                    font-size: 18px;
+                h5 {
+                    padding-top: 15px;
+                    width: 100%;
+                    line-height: 30px;
+                    font-size: 20px;
 
                     span {
                         margin-left: 15px;
