--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -143,40 +143,6 @@ body {
                 padding: 15px;
                 min-width: 283px;
 
-                .break_info {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-between;
-
-                    .info_block {
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        min-width: 20px;
-                        min-height: 20px;
-                        background-color: white;
-                        border-radius: 50%;
-
-                        .info_item {
-                            width: 17px;
-                            height: 17px;
-                        }
-                    }
-                }
-
-                #tooltip {
-                    z-index: 9999;
-                    position: absolute;
-                    display: none;
-                    top: 0px;
-                    left: 0px;
-                    background-color: #fff;
-                    padding: 5px 10px 5px 10px;
-                    color: #000;
-                    font-weight: 500;
-                    border-radius: 5px;
-                }
-
                 label {
                     display: flex;
                     flex-direction: row;
@@ -296,14 +262,14 @@ body {
                 padding: 15px;
                 margin-left: 15px;
 
-                h5 {
+                .res_tick {
                     padding-top: 15px;
                     width: 100%;
                     line-height: 30px;
                     font-size: 20px;
 
                     span {
-                        margin-left: 15px;
+                        display: flex;
                         float: right;
                     }
                 }
@@ -319,7 +285,7 @@ body {
         .plot_day {
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
             width: 100%;
             height: 330px;
             margin-top: 15px;
@@ -328,7 +294,7 @@ body {
             border-radius: 15px;
 
             .containerPlot {
-                width: 940px;
+                width: 960px;
                 max-height: 250px;
                 color: black;
             }
@@ -337,7 +303,7 @@ body {
         .plot_trande {
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
             width: 100%;
             height: 330px;
             margin-top: 15px;
@@ -346,7 +312,7 @@ body {
             border-radius: 15px;
 
             .containerPlot {
-                width: 940px;
+                width: 960px;
                 max-height: 250px;
                 color: black;
             }
