--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,7 +22,6 @@ body {
   justify-content: center;
   background-color: black;
   overflow-y: scroll;
-  margin-top: 50px;
 }
 
 ::-webkit-scrollbar {
@@ -42,6 +41,25 @@ body {
   background: #555;
 }
 
+.block_row {
+  display: flex;
+  flex-direction: row;
+}
+
+.block_column {
+  display: flex;
+  flex-direction: column;
+}
+
+h3 {
+  text-align: left;
+  font-weight: bold;
+  font-size: 20px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  letter-spacing: 0.1px;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -50,14 +68,6 @@ body {
 .container__calc .calc {
   display: flex;
   flex-direction: row;
-}
-.container__calc .calc h3 {
-  text-align: left;
-  font-weight: bold;
-  font-size: 20px;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  letter-spacing: 0.1px;
 }
 .container__calc .calc h4 {
   position: relative;
@@ -89,8 +99,8 @@ body {
   background-color: #1d1c1c;
   color: white;
   border-radius: 15px;
-  padding: 0 15px 0 15px;
-  min-width: 450px;
+  width: 50%;
+  padding: 0 15px 15px 15px;
 }
 .container__calc .calc .battery_stat h3 {
   text-align: left;
@@ -114,17 +124,17 @@ body {
   padding: 0 5px 0 5px;
 }
 .container__calc .calc .battery_stat .last_label {
-  margin-bottom: 5px;
+  padding-left: 15px;
 }
 .container__calc .calc .stop_time {
   margin-left: 15px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   background-color: #1d1c1c;
   color: white;
   border-radius: 15px;
   padding: 15px;
-  min-width: 283px;
+  min-width: 50%;
 }
 .container__calc .calc .stop_time label {
   display: flex;
@@ -132,24 +142,16 @@ body {
   align-items: center;
   justify-content: center;
   padding-top: 15px;
-  width: 190px;
+  width: 150px;
 }
 .container__calc .calc .stop_time label input {
   margin-left: 10px;
   margin-right: 10px;
-  width: 130px;
+  width: 90px;
   user-select: none;
 }
-.container__calc .calc .stop_time .block_row {
-  display: flex;
-  flex-direction: row;
-}
-.container__calc .calc .stop_time .block_column {
-  display: flex;
-  flex-direction: column;
-}
 .container__calc .calc .stop_time .plus {
-  width: 100%;
+  width: 40px;
   height: 75px;
   margin-top: 15px;
   padding: 0;
@@ -191,6 +193,9 @@ body {
   overflow-y: scroll;
   max-height: 135px;
   min-height: 135px;
+  background-color: #1d1c1c;
+  color: white;
+  padding-left: 15px;
 }
 .container__calc .calc .stop_time .stash .post {
   width: 100%;
@@ -205,7 +210,7 @@ body {
 }
 .container__calc .calc .stop_time .stash .post .del {
   display: inline-block;
-  min-width: 60px;
+  min-width: 50px;
   height: 18px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   text-align: center;
@@ -221,61 +226,47 @@ body {
 .container__calc .calc .stop_time .stash .post .del:hover {
   animation: white_black 0.2s both;
 }
-.container__calc .calc .result {
+.container__plot {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.container__plot .result {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 25%;
   background-color: #1d1c1c;
   color: white;
   border-radius: 15px;
   padding: 15px;
-  margin-left: 15px;
+  margin-top: 15px;
 }
-.container__calc .calc .result .res_tick {
+.container__plot .result .res_tick {
   padding-top: 15px;
   width: 100%;
   line-height: 30px;
   font-size: 20px;
 }
-.container__calc .calc .result .res_tick span {
+.container__plot .result .res_tick span {
   display: flex;
   float: right;
-}
-.container__plot {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
 }
 .container__plot .plot_day {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  width: 100%;
+  width: 75%;
   height: 330px;
   margin-top: 15px;
+  margin-left: 15px;
   background-color: #1d1c1c;
   color: white;
   border-radius: 15px;
 }
 .container__plot .plot_day .containerPlot {
   width: 960px;
-  max-height: 250px;
-  color: black;
-}
-.container__plot .plot_trande {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  width: 100%;
-  height: 330px;
-  margin-top: 15px;
-  background-color: #1d1c1c;
-  color: white;
-  border-radius: 15px;
-}
-.container__plot .plot_trande .containerPlot {
-  width: 960px;
-  max-height: 250px;
+  height: 100%;
+  padding: 15px 15px 15px 0;
   color: black;
 }
 
