--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,9 +40,16 @@ body {
   background: #555;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .block_row {
   display: flex;
   flex-direction: row;
+  gap: 1rem;
 }
 
 .block_column {
@@ -193,7 +200,8 @@ h3 {
   max-height: 217px;
   background-color: #1d1c1c;
   color: white;
-  padding-left: 30px;
+  padding-left: 15px;
+  margin-top: 15px;
 }
 .container__calc .calc .stop_time .stash .post {
   width: 100%;
@@ -201,6 +209,7 @@ h3 {
   margin-top: 15px;
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 .container__calc .calc .stop_time .stash .post .time_step {
   display: inline-block;
@@ -257,6 +266,7 @@ h3 {
   height: 330px;
   margin-top: 15px;
   margin-left: 15px;
+  padding-right: 15px;
   background-color: #1d1c1c;
   color: white;
   border-radius: 15px;
