--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,6 +21,7 @@ body {
   align-items: center;
   justify-content: center;
   background-color: black;
+  overflow: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -69,7 +70,8 @@ h3 {
 .container {
   display: flex;
   flex-direction: column;
-  width: 980px;
+  min-width: 890px;
+  max-width: 980px;
 }
 .container__calc .calc {
   display: flex;
@@ -266,7 +268,7 @@ h3 {
   height: 330px;
   margin-top: 15px;
   margin-left: 15px;
-  padding-right: 15px;
+  padding-right: 20px;
   background-color: #1d1c1c;
   color: white;
   border-radius: 15px;
