--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,7 @@ body {
     align-items: center;
     justify-content: center;
     background-color: black;
+    overflow: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -73,7 +74,8 @@ h3 {
 .container {
     display: flex;
     flex-direction: column;
-    width: 980px;
+    min-width: 890px;
+    max-width: 980px;
 
     &__calc {
 
@@ -303,7 +305,7 @@ h3 {
             height: 330px;
             margin-top: 15px;
             margin-left: 15px;
-            padding-right: 15px;
+            padding-right: 20px;
             background-color: #1d1c1c;
             color: white;
             border-radius: 15px;
