--- a/src/css/style.css
+++ b/src/css/style.css
@@ -212,6 +212,7 @@ h3 {
   display: flex;
   flex-direction: row;
   align-items: center;
+  text-align: center;
 }
 .container__calc .calc .stop_time .stash .post .time_step {
   display: inline-block;
