--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -236,7 +236,7 @@ h3 {
                         display: flex;
                         flex-direction: row;
                         align-items: center;
-
+                        text-align: center;
                         .time_step {
                             display: inline-block;
                             width: 190px;
